# bank-product-monitoring-app

./: .env_template  .gitattributes  .gitignore  README.md  env.example  pyproject.toml
src/: app.py  test_parsers.py
src/core/: __init__.py  config.py  database.py  models.py  theme.py
src/core/normalizers/: __init__.py  gigachat.py
src/core/parsers/: __init__.py  alpha_credit_card.py  alpha_credit_products.py  alpha_debit_card.py  banki_ratings.py  base.py  gazprombank_credit_card.py  gazprombank_credit_products.py  gazprombank_debit_card.py  moex_securities.py  sberbank_credit_card.py  sberbank_credit_products.py  sberbank_debit_card.py  tinkoff_credit_card.py  tinkoff_credit_products.py  tinkoff_debit_card.py  vtb_credit_card.py  vtb_credit_products.py  vtb_debit_card.py
src/core/services/: __init__.py  chat_service.py  currency_rates_service.py  data_service.py  database_service.py  export_service.py  logger_service.py  notification_service.py  parsing_service.py
src/resources/ui/: main_window.ui
src/ui/: main_window.py  ui_main_window.py
src/ui/components/: stat_card.py
src/ui/widgets/: __init__.py  banki_ratings_widget.py  charts_widget.py  currency_history_widget.py  currency_tab_widget.py  currency_widget.py  logs_widget.py  moex_charts_widget.py  settings_widget.py  table_widget.py
